# student-attendance-system

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  SUPPORT.md  conanfile.txt  config.json  mkdocs.yml  pyproject.toml  vcpkg.json  xmake.lua
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml
benchmarks/: CMakeLists.txt  string_utils_bench.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  MSYS2MinGW64Toolchain.cmake  MkDocs.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
db/: model.json  schema.sql
docs/: Doxyfile  index.md  question.md
docs/api/: REST-API.md  index.md  openapi.yaml
docs/guides/: benchmarks.md  cmake.md  code-quality.md  getting-started.md  testing.md  xmake.md
docs/server/: README.md
examples/: example_01.cpp
include/project_name/core/: greeting.hpp
include/project_name/utils/: string_utils.hpp
include/student_attendance/controllers/: AttendanceController.h  AuthController.h  ClassController.h  DataController.h  ReportController.h  StudentController.h
include/student_attendance/db/: DatabaseManager.h
include/student_attendance/filters/: AuthFilter.h
include/student_attendance/models/: Attendance.h  DataStore.h  Student.h  User.h
include/student_attendance/orm/: Attendances.h  Students.h
include/student_attendance/services/: AttendanceService.h  AuthService.h  ReportService.h  StudentService.h
include/student_attendance/utils/: AttendanceStatus.h  JsonResponse.h
scripts/: build.sh  format.sh  setup.sh
src/: main.cpp  server_main.cpp
src/controllers/: AttendanceController.cc  AuthController.cc  ClassController.cc  DataController.cc  ReportController.cc  StudentController.cc
src/core/: greeting.cpp
src/db/: DatabaseManager.cc
src/filters/: AuthFilter.cc
src/models/: DataStore.cc
src/orm/: Attendances.cc  Students.cc
src/services/: AttendanceService.cc  AuthService.cc  ReportService.cc  StudentService.cc
src/utils/: string_utils.cpp
tests/: CMakeLists.txt
tests/api/: attendance_api_test.cpp  auth_api_test.cpp  class_api_test.cpp  data_api_test.cpp  database_test.cpp  models_test.cpp  report_api_test.cpp  student_api_test.cpp  utils_test.cpp
tests/integration/: smoke_test.cpp
tests/unit/: greeting_test.cpp  string_utils_test.cpp
